--- a/package.json
+++ b/package.json
@@ -23,14 +23,17 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
+    "html5-qrcode": "^2.3.8",
     "input-otp": "^1.4.2",
     "katex": "^0.16.22",
     "lucide-react": "^0.543.0",
     "next": "15.5.2",
+    "qrcode.react": "^4.2.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.5.0",
     "react-katex": "^3.1.0",
+    "react-qr-code": "^2.0.18",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
