--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "15.5.2",
     "qrcode.react": "^4.2.0",
     "react": "18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "18.3.1",
     "react-icons": "^5.5.0",
     "react-katex": "^3.1.0",
