--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.12",
     "html5-qrcode": "^2.3.8",
     "input-otp": "^1.4.2",
