--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-icons": "^5.5.0",
     "react-katex": "^3.1.0",
     "react-qr-code": "^2.0.18",
+    "react-to-print": "^3.1.1",
     "recharts": "^3.2.1",
     "tailwind-merge": "^3.3.1"
   },
