--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
@@ -34,6 +35,7 @@
     "qrcode.react": "^4.2.0",
     "react": "18.3.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-day-picker": "^9.11.0",
     "react-dom": "18.3.1",
     "react-icons": "^5.5.0",
     "react-katex": "^3.1.0",
