--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@reduxjs/toolkit": "^2.9.0",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
@@ -40,6 +41,7 @@
     "react-icons": "^5.5.0",
     "react-katex": "^3.1.0",
     "react-qr-code": "^2.0.18",
+    "react-redux": "^9.2.0",
     "react-to-print": "^3.1.1",
     "recharts": "^3.2.1",
     "tailwind-merge": "^3.3.1"
