--- a/package.json
+++ b/package.json
@@ -53,8 +53,10 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/recharts": "^1.8.29",
-    "eslint": "^9",
+    "eslint": "^9.37.0",
     "eslint-config-next": "15.5.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-perf": "^3.3.3",
     "mini-css-extract-plugin": "^2.9.4",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.8",
