--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@reduxjs/toolkit": "^2.9.0",
     "@tanstack/react-table": "^8.21.3",
+    "@types/react-window": "^1.8.8",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -43,6 +44,8 @@
     "react-qr-code": "^2.0.18",
     "react-redux": "^9.2.0",
     "react-to-print": "^3.1.1",
+    "react-window": "^2.2.1",
+    "react-window-infinite-loader": "^2.0.0",
     "recharts": "^3.2.1",
     "tailwind-merge": "^3.3.1"
   },
